# UPSC-Answer-Sheet-Evaluator

./: README.md  Sheet1_report.txt  Sheet2_report.txt  Sheet3_report.txt  constants.py  evaluate.py  pyproject.toml  report.txt  requirements.txt
