[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.0.11",
    "openai>=1.78.1",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "reportlab>=4.4.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
